--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
+# Python package
 __pycache__
-best.pt
-yolov8n.pt
+
+# Models
+model
+
+# Video files
 output_video.mp4
 20240116_161459.mp4
 first_frame
+
+# Enviorment
+projectEnv
